syntax = "proto3";

option csharp_namespace = "NWorkQueue.Models";

package greet;

// The service definition.
service QueueApi {
  rpc CreateQueue (CreateQueueRequest) returns (CreateQueueResponse);
  rpc InitializeStorage (InitializeStorageRequest) returns (InitializeStorageResponse);
  rpc DeleteQueueById (DeleteQueueByIdRequest) returns (DeleteQueueByIdResponse);
  rpc DeleteQueueByName (DeleteQueueByNameRequest) returns (DeleteQueueByNameResponse);
  rpc QueueInfoById (QueueInfoByIdRequest) returns (QueueInfoResponse);
  rpc QueueInfoByName (QueueInfoByNameRequest) returns (QueueInfoResponse);
  rpc StartTransaction (StartTransactionRequest) returns (StartTransactionResponse);
  rpc CommitTransaction (CommitTransactionRequest) returns (CommitTransactionResponse);
  rpc RollbackTranaction (RollbackTransactionRequest) returns (RollbackTransactionResponse);
  //rpc QueueMessage
  //rpc PullMessage
  //rpc PeelMessage
  //rpc Subscribe
}

message QueueInfoResponse {
  bool RecordFound = 1;
  int64 QueueId = 2;
  string QueueName = 3;
}

message QueueInfoByNameRequest {
  string QueueName = 1;
}

message QueueInfoByIdRequest {
  int64 QueueId = 1;
}

// The request message containing the user's name.
message CreateQueueRequest {
  string QueueName = 1;
}

// The response message containing the greetings.
message CreateQueueResponse {
  int64 QueueId = 1;
  // Standardized Name
  string QueueName = 2;
}

message InitializeStorageRequest {
  bool DeleteExistingData = 1;
}

message InitializeStorageResponse {
}

message DeleteQueueByIdRequest {
  int64 QueueId = 1;
}

message DeleteQueueByIdResponse {
}

message DeleteQueueByNameRequest {
  string QueueName = 1;
}

message DeleteQueueByNameResponse {
}

message StartTransactionRequest {
  int32 ExpireInMin = 1;
}

message StartTransactionResponse {
  int64 TransId = 1;
}

message CommitTransactionRequest {
  int64 TransId = 1;
}

message CommitTransactionResponse {
}

message RollbackTransactionRequest {
  int64 TransId = 1;
}

message RollbackTransactionResponse {
}
